--- a/Trapick/src/main/webapp/resources/style/css/main_insert_css.css
+++ b/Trapick/src/main/webapp/resources/style/css/main_insert_css.css
@@ -7,8 +7,8 @@
  	font-family: fantasy;
  	/* margin-left: 40%; */
  	left: 45%;
- 	top: 300px;
-
+ 	top: 220px;
+	
 }
 
 #container {/* 전체div */
@@ -23,8 +23,8 @@
    border-radius: 12px;
    font-size: 16px;
    resize: both;
-   left: 25%;
-   top: 400px;
+   left: 23%;
+   top: 320px;
 }
 
 body {
@@ -33,7 +33,7 @@ body {
 }
 
 #contents {/* 내용div */
-   margin-left: 110px;
+   margin-left: 30px;
    margin-top: 50px;   
 }
 
@@ -102,4 +102,10 @@ body {
 #slideshow>div img {
 	width: 100%;
 	height: 100%;
+}
+
+#header {
+	position: absolute;
+	z-index: 3;
+	width: 100%;
 }
