item_sort, list, MainPage, scheduler.scc edit
Change-Id: I01bec5a2b9fa26f9e4547b984e92e100de664467
Signed-off-by: sprtms16 <sprtms16@gmail.com>

--- a/Trapick/src/main/webapp/resources/css/scheduler.css
+++ b/Trapick/src/main/webapp/resources/css/scheduler.css
@@ -1,314 +1,314 @@
 td {
-	width: 100px;
-	height: 100px;
-	position: relative;
+   width: 120px;
+   height: 100px;
+   position: relative;
 }
 
 .liveButton {
-	position: absolute;
-	z-index: 2;
-	left: 0;
-	top: 0;
+   position: absolute;
+   z-index: 2;
+   left: 0;
+   top: 0;
 }
 
 .liveInput {
-	position: absolute;
-	z-index: 2;
-	left: 23px;
-	top: 0;
+   position: absolute;
+   z-index: 2;
+   left: 23px;
+   top: 0;
 }
 
 td .img {
-	/* width: 86px;
-	height: 100px; */
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	z-index: 1;
-	top: 0px;
-	left: 0px;
+   /* width: 86px;
+   height: 100px; */
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   z-index: 1;
+   top: 0px;
+   left: 0px;
 }
 
 body .list_detail {
-	display: none;
+   display: none;
 }
 
 #subject {
-	font-size: 50px;
-	font-weight: bold;
-	text-align: center;
-	margin-bottom: 30px;
-	margin-top: 30px;
-	font-family: Fantasy;
+   font-size: 50px;
+   font-weight: bold;
+   text-align: center;
+   margin-bottom: 30px;
+   margin-top: 30px;
+   font-family: Fantasy;
 }
 
 #tabs li {
-	list-style: none;
-	float: left;
-	margin-bottom: 20px;
-	text-align: center;
+   list-style: none;
+   float: left;
+   margin-bottom: 20px;
+   text-align: center;
 }
 
 #tabs ul {
-	margin-bottom: 5px;
+   margin-bottom: 5px;
 }
 
 #land {
-	text-align: center;
+   text-align: center;
 }
 
 #landMarkList li {
-	list-style: none;
-	float: left;
-	margin-left: 80px;
-	margin-bottom: 20px;
+   list-style: none;
+   float: left;
+   margin-left: 80px;
+   margin-bottom: 20px;
 }
 
 #tabs li a {
-	color: black;
-	font-size: 13.5px;
-	font-weight: bold;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 20px;
-	padding-right: 20px;
+   color: black;
+   font-size: 13.5px;
+   font-weight: bold;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   padding-left: 20px;
+   padding-right: 20px;
 }
 
 #landMarkList li a {
-	color: black;
-	font-size: 13.5px;
-	font-weight: bold;
-	text-align: center;
+   color: black;
+   font-size: 13.5px;
+   font-weight: bold;
+   text-align: center;
 }
 
 #landmarkDiv img {
-	height: 100px;
-	width: 163.63px;
-	display: block;
-	vertical-align: bottom;
-	margin-left: 30px;
-	position: absolute;
+   height: 100px;
+   width: 163.63px;
+   display: block;
+   vertical-align: bottom;
+   margin-left: 30px;
+   position: absolute;
 }
 
 #landName, #landDetail {
-	text-align: center;
+   text-align: center;
 }
 
 #tabs-1 img {
-	height: 100px;
-	width: 163.63px;
-	display: block;
-	vertical-align: bottom;
-	margin-left: 30px;
-	position: absolute;
+   height: 100px;
+   width: 163.63px;
+   display: block;
+   vertical-align: bottom;
+   margin-left: 30px;
+   position: absolute;
 }
 
 #tabs-2 img {
-	height: 100px;
-	width: 163.63px;
-	display: block;
-	vertical-align: bottom;
-	margin-left: 30px;
-	position: absolute;
+   height: 100px;
+   width: 163.63px;
+   display: block;
+   vertical-align: bottom;
+   margin-left: 30px;
+   position: absolute;
 }
 
 #tabs-3 img {
-	height: 100px;
-	width: 163.63px;
-	display: block;
-	vertical-align: bottom;
-	margin-left: 30px;
-	position: absolute;
+   height: 100px;
+   width: 163.63px;
+   display: block;
+   vertical-align: bottom;
+   margin-left: 30px;
+   position: absolute;
 }
 
 .list_detail {
-	margin-left: 30px;
-	margin-top: 5px;
+   margin-left: 30px;
+   margin-top: 5px;
 }
 
 .listName {
-	display: inline-block;
-	width: 170px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-align: center;
-	text-overflow: ellipsis;
-	font-weight: bold;
-	font-weight: bold;
-	font-size: 10px;
-	margin-top: 25px;
+   display: inline-block;
+   width: 170px;
+   white-space: nowrap;
+   overflow: hidden;
+   text-align: center;
+   text-overflow: ellipsis;
+   font-weight: bold;
+   font-weight: bold;
+   font-size: 10px;
+   margin-top: 25px;
 }
 
 .listPrice {
-	font-weight: bold;
-	color: black;
-	text-align: right;
-	font-size: 12px;
+   font-weight: bold;
+   color: black;
+   text-align: right;
+   font-size: 12px;
 }
 
 #list_thum {
-	height: 150px;
+   height: 150px;
 }
 
 #itemList {
-	margin-left: 50px;
-	overflow: scroll;
-	height: 570px;
-	width: 250px;
+   margin-left: 50px;
+   overflow: scroll;
+   height: 570px;
+   width: 250px;
 }
 
 #landmarkDiv {
-	margin-left: 50px;
-	overflow: scroll;
-	height: 580px;
-	width: 250px;
+   margin-left: 50px;
+   overflow: scroll;
+   height: 580px;
+   width: 250px;
 }
 
 #restList {
-	margin-left: 50px;
-	overflow: scroll;
-	height: 570px;
-	width: 250px;
+   margin-left: 50px;
+   overflow: scroll;
+   height: 570px;
+   width: 250px;
 }
 
 #hotelList {
-	margin-left: 50px;
-	overflow: scroll;
-	height: 570px;
-	width: 250px;
+   margin-left: 50px;
+   overflow: scroll;
+   height: 570px;
+   width: 250px;
 }
 
 #city_List {
-	float: right;
-	margin-top: 0px;
-	margin-bottom: 20px;
+   float: right;
+   margin-top: 0px;
+   margin-bottom: 20px;
 }
 
 .drag {
-	width: 200px;
-	height: 200px;
+   width: 200px;
+   height: 200px;
 }
 
 .drag img {
-	position: relative;
+   position: relative;
 }
 
 .drag>div {
-	width: 160px;
-	height: 50px;
-	display: inline;
-	position: relative;
+   width: 160px;
+   height: 50px;
+   display: inline;
+   position: relative;
 }
 
 .list_detail_ {
-	position: absolute;
+   position: absolute;
 }
 
-#mySheduleTable {
-	text-align: center;
+table {
+   text-align: center;
 }
 
-#mySheduleTable th {
-	height: 50px;
-	background-color: #D8D8D8;
-	border-bottom-color: black;
+table th {
+   height: 50px;
+   background-color: #D8D8D8;
+   border-bottom-color: black;
 }
 
 #mySheduleTable td {
-	height: 100px;
-	width: 200px;
+   height: 100px;
+   width: 200px;
 }
 
 .time {
-	width: 60px;
+   width: 60px;
 }
 
 #sortButton {
-	margin-left: 40px;
-	border: 1px;
-	margin-bottom: 20px;
-	position: absolute;
-	top: -40px;
-	left: 20px;
+   margin-left: 40px;
+   border: 1px;
+   margin-bottom: 20px;
+   position: absolute;
+   top: -40px;
+   left: 20px;
 }
 
 .selected {
-	background-color: #D8D8D8;
-	border: 1px black soild;
-	border-radius: 5px;
-	padding: 10px;
+   background-color: #D8D8D8;
+   border: 1px black soild;
+   border-radius: 5px;
+   padding: 10px;
 }
 
 #save {
-	position: relative;
-	left: 220px;
-	margin-bottom: 20px;
+   position: relative;
+   left: 180px;
+   margin-bottom: 20px;
 }
 
 #course {
-	position: relative;
-	left: 200px;
-	margin-bottom: 20px;
+   position: relative;
+   left: 160px;
+   margin-bottom: 20px;
 }
 
 #map-canvas {
-	position: relative;
-	left: 220px;
-	border: 1px solid black;
-	margin-bottom: 20px;
+   position: relative;
+   left: 220px;
+   border: 1px solid black;
+   margin-bottom: 20px;
 }
 
 #landDetail {
-	
+   
 }
 
 #landName {
-	font-size: 12px;
-	font-weight: bold;
+   font-size: 12px;
+   font-weight: bold;
 }
 
 #landDetail {
-	font-weight: bold;
+   font-weight: bold;
 }
 
 #asdf {
-	position: relative;
-	left: 620px;
-	margin-bottom: 15px;
+   position: relative;
+   left: 620px;
+   margin-bottom: 15px;
 }
 
 body {
-	text-align: center;
-	margin: 0 auto;
+   text-align: center;
+   margin: 0 auto;
 }
 
 #Progress_Loading {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	background: #ffffff;
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   background: #ffffff;
 }
 
 #progress {
-	width: 100px;
-	height: auto;
-	z-index: 6;
+   width: 100px;
+   height: auto;
+   z-index: 6;
 }
 
 #mask {
-	position: absolute;
-	left: 0;
-	top: 0;
-	z-index: 5;
-	background-color: #A4A4A4;
-	display: none;
+   position: absolute;
+   left: 0;
+   top: 0;
+   z-index: 5;
+   background-color: #A4A4A4;
+   display: none;
 }
 
 #jb {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	width: 60%;
-	height: 50px;
-	z-index: 500;
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   width: 60%;
+   height: 50px;
+   z-index: 500;
 }
