--- a/Trapick/src/main/webapp/resources/css/scheduler.css
+++ b/Trapick/src/main/webapp/resources/css/scheduler.css
@@ -1,4 +1,4 @@
-                               td {
+td {
    width: 100px;
    height: 100px;
    position: relative;
@@ -27,12 +27,17 @@ td .img {
    left: 0px;
 }
 
+.recommendList_thumb{
+   width: 100%;
+   height: 100%;
+}
+
 #subject {
    font-size: 50px;
    font-weight: bold;
    text-align: center;
-   margin-bottom: 30px;
-   margin-top: 30px;
+   margin-bottom: 15px;
+   margin-top: 80px;
    font-family: Fantasy;
 }
 
@@ -101,14 +106,16 @@ table th {
 }
 
 #save {
-   position: relative;
-   left: 180px;
+   position: absolute;
+   top: -40px;
+   left: 480px;
    margin-bottom: 20px;
 }
 
 #course {
-   position: relative;
-   left: 160px;
+   position: absolute;
+   top: -40px;
+   left: 390px;
    margin-bottom: 20px;
 }
 
@@ -120,9 +127,17 @@ table th {
 }
 
 #asdf {
-   position: relative;
-   left: 620px;
+	width:80px;
+   position: absolute;
+   top: 205px;
+   left: 450px;
    margin-bottom: 15px;
+}
+
+#city_search{
+	position: absolute;
+	top:-0px;
+	left: 85px;	
 }
 
 #Progress_Loading {
@@ -156,11 +171,25 @@ table th {
    z-index: 500;
 }
 
-.drag {
+/* 바뀐 부분 */
+#landmarkDiv>.drag {
    border: solid 1px;
    width: 250px;
    height: 85px;
 }
+
+#itemList>.drag {
+   border: solid 1px;
+   width: 250px;
+   height: 85px;
+}
+
+#hotelList>.drag {
+   border: solid 1px;
+   width: 250px;
+   height: 85px;
+}
+/* 여기 까지 */
 
 #landmarkDiv, #hotelList, #itemList, #restList {
    width: 250px;
@@ -182,7 +211,258 @@ table th {
 table .list_detail{
    display: none;
 }
+
+table .recommendDetail{
+   display: none;
+}
+
+table span{
+   display : none;
+}
+
 .list_detail #name,#detail{
    width: 120px;
    height: 30px;
-}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
+}
+#map-po{
+   position: relative;
+}
+#map-canvas{
+   position: absolute;
+   left: 1050px;
+   bottom: 50px;
+   background-color: #606060;
+   color: #fff;
+}
+.container{
+   margin: 0px;
+}
+.liveInput{
+   background-color:#F2F2F2;
+   width: 20px;
+   height: 20px;
+}
+
+/* 여기부터 시작함 _ 190730 */
+
+#recommendUl li{
+   list-style-type: none;
+   float: left;
+   margin-left: 45px;
+   display: inline;
+}
+
+#recommendUserUl li{
+   list-style-type: none;
+   float: left;
+   margin-right: 45px;
+   display: inline;
+}
+
+#recommendUserUl li img{
+   width: 170px;
+   height: 200px;
+   border: solid 1px #A4A4A4;
+   z-index: 3;
+}
+
+#recommendUl li img{
+	width: 170px;
+	height: 200px;
+	border: solid 1px #A4A4A4;
+	z-index: 3;
+}
+
+.recommendList_thumb{
+   position: relative;
+}
+
+#category{
+   background-color: #6E6E6E;
+   padding:4px 10px;
+   position:absolute;
+   left:1%;
+   top:1%;
+   z-index:1;
+   opacity:0.7;
+   font-weight: bold;
+   color: white;
+}
+
+#recommendDetailName{
+   position: relative;
+   left: -168px;
+   top : 60px;
+}
+
+#recommendDetailName #name{
+   background-color: #6E6E6E;
+   overflow-x:hidden;
+   overflow-y:hidden;
+   text-overflow: ellipsis;
+   white-space: nowrap; 
+   width:167px;
+   opacity:0.7;
+   font-weight: bold;
+   color:white;
+   position: absolute;
+   left: 10%;
+   bottom: 42%;
+   padding-top: 5px;
+}
+
+#recommendDetailName #recommendDetail{
+   background-color: #6E6E6E;
+   opacity:0.7;
+   
+}
+
+
+#recommendDetail{
+   width:167px;
+   text-align:right;
+   position:absolute;
+   left: 10%;
+   bottom: 29.8%;
+   padding-top: 5px;
+   padding-bottom: 5px;
+   overflow-x:hidden;
+   overflow-y:hidden;
+   text-overflow: ellipsis;
+   white-space: nowrap;
+   opacity:0.7;
+   font-weight: bold;
+   color:white;
+   
+}
+
+#recommendDetailName #price{
+   background-color:#04B4AE;
+   width:65px;
+   text-align:right;
+   opacity: 0.9;
+   color: black;
+   font-weight: bold;
+   position: absolute;
+   left:115px;
+   top:39%;
+   padding-top: 1px;
+   padding-bottom: 1px;
+    
+}
+
+#schedule_title{
+   position: absolute;
+   top: -30px;
+}
+
+#titleSche{
+	margin-bottom: 15px;
+}
+
+#landMarkList ul{
+	padding : 0px;
+}
+
+#landMarkList li{
+	list-style: none;
+	font-weight: bold;
+	font-size: 15px;
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+#asdf2{
+	margin-bottom: 40px;
+}
+
+#map-po > .col-md-5{
+	padding-right: 0px;
+}
+
+#map-po > .col-md-1{
+	padding-left: 0px;
+}
+
+#itemPriceSort{
+	position: absolute;
+	left: 1060px;
+}
+
+#itemSalesSort{
+	position: absolute;
+	left: 1140px;
+}
+
+#itemDistSort{
+	position: absolute;
+	left: 1220px;
+}
+
+#hotelPriceSort{
+	position: absolute;
+	left: 1060px;
+}
+
+#hotelReviewSort{
+	position: absolute;
+	left: 1140px;
+}
+
+#hotelDistSort{
+	position: absolute;
+	left: 1220px;
+}
+
+#landmarkHitsSort{
+	position: absolute;
+	left: 825px;
+}
+
+#landmarkDistSort{
+	position: absolute;
+	left:905px;
+}
+
+#city_List{
+	margin-top:12px;
+}
+
+#recommendUser{
+	margin-top: 20px;
+	position: relative;
+	left: -185px;
+}
+
+#recommend{
+	margin-top: 20px;
+	position: relative;
+	left: -185px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
