--- a/Trapick/src/main/webapp/resources/css/scheduler.css
+++ b/Trapick/src/main/webapp/resources/css/scheduler.css
@@ -7,15 +7,15 @@ td {
 .liveButton {
    position: absolute;
    z-index: 2;
-   left: 0;
+   right: 0;
    top: 0;
 }
 
 .liveInput {
    position: absolute;
    z-index: 2;
-   left: 23px;
-   top: 0;
+   left: 0px;
+   top: 2px;
 }
 
 td .img {
@@ -42,7 +42,6 @@ td .img {
 }
 
 #tabs-1 {
-   clear: both;
 }
 
 #tabs li {
@@ -119,25 +118,18 @@ table th {
    margin-bottom: 20px;
 }
 
-#map-canvas {
-   position: relative;
-   left: 220px;
-   border: 1px solid black;
-   margin-bottom: 20px;
-}
-
 #asdf {
-	width:80px;
+   width:80px;
    position: absolute;
-   top: 205px;
-   left: 450px;
+   top: 200px;
+   left: 430px;
    margin-bottom: 15px;
 }
 
 #city_search{
-	position: absolute;
-	top:-0px;
-	left: 85px;	
+   position: absolute;
+   top:-0px;
+   left: 85px;   
 }
 
 #Progress_Loading {
@@ -199,15 +191,92 @@ table th {
 }
 
 #landmarkDiv img, #tabs img {
-   width: 80px;
+   margin-top:1.5px;
+   width: 100px;
    height: 80px;
 }
 
-.list_detail>div {
-   margin-left: 20px;
-   width: 150px;
+#landmarkDiv #name{
+   margin-top:4px;
+   margin-left:5px;
+   font-size : 13px;
+   font-weight: bold;
+   font-family: fantasy;
    overflow: hidden;
+   text-overflow: ellipsis;
+      white-space: nowrap; 
 }
+
+#landmarkDiv .detail{
+   margin-top:4px;
+   margin-left:5px;
+   text-align:right;
+   font-size : 12px;
+   font-family: fantasy;
+   overflow: hidden;
+   text-overflow: ellipsis;
+      white-space: nowrap; 
+}
+
+#itemList .list_detail{
+   margin-left: 20px;
+}
+
+#itemList #name{
+   font-weight: bold;
+   font-family: fantasy;
+   overflow: hidden;
+   text-overflow: ellipsis;
+      white-space: nowrap; 
+}
+
+#itemList #detail{
+   margin-top:4px;
+   margin-left:15px;
+   text-align:center;
+   padding-left:30px;
+   font-size : 12px;
+   font-family: fantasy;
+   overflow:hidden;
+   white-space:nowrap;
+   text-overflow: ellipsis;
+}
+
+#itemList #price{
+   font-size : 10px;
+   font-family: fantasy;
+}
+
+#hotelList .list_detail{
+   margin-left: 20px;
+}
+
+
+#hotelList #name{
+   font-weight: bold;
+   font-family: fantasy;
+   overflow: hidden;
+   text-overflow: ellipsis;
+      white-space: nowrap; 
+}
+
+#hotelList #detail{
+   margin-top:4px;
+   margin-left:15px;
+   text-align:center;
+   padding-left:30px;
+   font-size : 12px;
+   font-family: fantasy;
+   overflow:hidden;
+   white-space:nowrap;
+   text-overflow: ellipsis;
+}
+
+#hotelList #price{
+   font-size : 10px;
+   font-family: fantasy;
+}
+
 table .list_detail{
    display: none;
 }
@@ -224,16 +293,7 @@ table span{
    width: 120px;
    height: 30px;
 }
-#map-po{
-   position: relative;
-}
-#map-canvas{
-   position: absolute;
-   left: 1050px;
-   bottom: 50px;
-   background-color: #606060;
-   color: #fff;
-}
+
 .container{
    margin: 0px;
 }
@@ -262,15 +322,15 @@ table span{
 #recommendUserUl li img{
    width: 170px;
    height: 200px;
-   border: solid 1px #A4A4A4;
+   border: solid 3px #D8D8D8;
    z-index: 3;
 }
 
 #recommendUl li img{
-	width: 170px;
-	height: 200px;
-	border: solid 1px #A4A4A4;
-	z-index: 3;
+   width: 170px;
+   height: 200px;
+   border: solid 3px #D8D8D8;
+   z-index: 3;
 }
 
 .recommendList_thumb{
@@ -357,112 +417,125 @@ table span{
 }
 
 #titleSche{
-	margin-bottom: 15px;
+   margin-bottom: 15px;
 }
 
 #landMarkList ul{
-	padding : 0px;
+   padding : 0px;
 }
 
 #landMarkList li{
-	list-style: none;
-	font-weight: bold;
-	font-size: 15px;
-	text-align: center;
-	margin-bottom: 10px;
+   list-style: none;
+   font-weight: bold;
+   font-size: 15px;
+   text-align: center;
+   margin-bottom: 10px;
 }
 
 #asdf2{
-	margin-bottom: 40px;
+   margin-bottom: 40px;
 }
 
-#map-po > .col-md-5{
-	padding-right: 0px;
-}
-
-#map-po > .col-md-1{
-	padding-left: 0px;
-}
 
 #itemPriceSort{
-	position: absolute;
-	left: 1060px;
+   position: absolute;
+   left: 1060px;
 }
 
 #itemSalesSort{
-	position: absolute;
-	left: 1140px;
+   position: absolute;
+   left: 1140px;
 }
 
 #itemDistSort{
-	position: absolute;
-	left: 1220px;
+   position: absolute;
+   left: 1220px;
 }
 
 #hotelPriceSort{
-	position: absolute;
-	left: 1060px;
+   position: absolute;
+   left: 1060px;
 }
 
 #hotelReviewSort{
-	position: absolute;
-	left: 1140px;
+   position: absolute;
+   left: 1140px;
 }
 
 #hotelDistSort{
-	position: absolute;
-	left: 1220px;
+   position: absolute;
+   left: 1220px;
 }
 
 #landmarkHitsSort{
-	position: absolute;
-	left: 825px;
+   position: absolute;
+   left: 825px;
 }
 
 #landmarkDistSort{
-	position: absolute;
-	left:905px;
+   position: absolute;
+   left:905px;
 }
 
 #city_List{
-	margin-top:12px;
+   margin-top:12px;
 }
 
 #recommendUser{
-	margin-top: 20px;
-	position: relative;
-	left: -185px;
+   margin-top: 20px;
+   position: relative;
+   left: -305px;
+   top:30px;
 }
 
 #recommend{
-	margin-top: 20px;
-	position: relative;
-	left: -185px;
+   margin-top: 20px;
+   position: relative;
+   left: -350px;
+   top:30px;
 }
 
+#tabs2 li{
+   list-style: none;
+   float: left;
+   margin-bottom: 20px;
+   text-align: center;
+}
 
+#tabs2{
+   margin-top:20px;
+   margin-bottom:20px;
+   position: relative;
+   width: 1000px;
+}
 
+#tabs2 li a {
+   color: black;
+   font-size: 13.5px;
+   font-weight: bold;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   padding-left: 20px;
+   padding-right: 20px;
+}
 
+#allClear{
+   width: 20px;
+   height: 20px;
+   position: absolute;
+   bottom:-25px;
+   right: 20px;
+}
+#map-po > .col-md-5{
+   padding-right: 0px;
+}
 
+#map-po > .col-md-1{
+   padding-left: 0px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#map-canvas{
+   position: absolute;
+   right: 20px;
+   bottom:-280px;
+}
